[metadata]
name = shadowsocks
version = 3.1.1
summary = A fast tunnel proxy that help you get through GFW
description-file = README.rst
author = clowwindy
author-email =
classifier =
    Environment :: Socks5 Environment
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    shadowsocks

[entry_points]
console_scripts =
    sslocal = shadowsocks.local:main
    ssserver = shadowsocks.server:main
